# chardonnay

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build_docker_images.sh  chardonnay.service  config_for_jepsen.json  create_schema.sh
.github/workflows/: build_and_test.yaml
common/: Cargo.toml
common/src/: config.rs  epoch_lease.rs  full_range_id.rs  host_info.rs  key_range.rs  keyspace_id.rs  lib.rs  record.rs  region.rs
common/src/membership/: mod.rs  range_assignment_oracle.rs
common/src/network/: fast_network.rs  for_testing.rs  mod.rs
common/src/network/for_testing/: udp_fast_network.rs
common/src/util/: flatbuf.rs  mod.rs
coordinator/: Cargo.toml
coordinator/src/: coordinator.rs  error.rs  keyspace.rs  lib.rs  rangeclient.rs  transaction.rs
epoch/: Cargo.toml
epoch/src/: lib.rs  main.rs  publisher_set_updater.rs  server.rs  storage.rs
epoch/src/storage/: cassandra.rs  in_memory.rs
epoch/tests/: storage_test.rs
epoch_broadcaster/: Cargo.toml
epoch_broadcaster/src/: server.rs
epoch_publisher/: Cargo.toml
epoch_publisher/src/: client.rs  error.rs  for_testing.rs  lib.rs  main.rs  server.rs
epoch_publisher/src/for_testing/: mock_epoch.rs
epoch_publisher/tests/: integration_tests.rs
epoch_reader/: Cargo.toml
epoch_reader/src/: reader.rs
flatbuf/: Cargo.toml  build.rs
flatbuf/src/: lib.rs
flatbuf/src/epoch_broadcaster/: schema.fbs
flatbuf/src/epoch_publisher/: schema.fbs
flatbuf/src/rangeserver/: schema.fbs
flatbuff/: Cargo.toml  build.rs
flatbuff/src/: lib.rs
flatbuff/src/rangeserver/: schema.fbs
kubernetes/: cassandra.yaml  debug_pod.yaml  deploy.sh  epoch_publisher.yaml  epoch_service.yaml  namespace.yaml  rangeserver.yaml  universe.yaml  warden.yaml
proto/: Cargo.toml  build.rs
proto/src/: epoch.proto  epoch_broadcaster.proto  epoch_publisher.proto  lib.rs  prefetch.proto  rangeserver.proto  universe.proto  warden.proto
rangeclient/: Cargo.toml
rangeclient/src/: client.rs
rangeclient/tests/: integration_tests.rs
rangeserver/: Cargo.toml
rangeserver/src/: cache.rs  chardonnay.code-workspace  config.json  epoch_provider.rs  epoch_supplier.rs  error.rs  for_testing.rs  key_range.rs  key_version.rs  keyrange.rs  lib.rs  main.rs  persistence.rs  prefetching_buffer.rs  range_manager.rs  server.rs  storage.rs  transaction_abort_reason.rs  transaction_info.rs  wal.rs  warden_handler.rs
rangeserver/src/cache/: memtabledb.rs
rangeserver/src/epoch_supplier/: reader.rs
rangeserver/src/for_testing/: epoch_provider.rs  epoch_supplier.rs  in_memory_wal.rs  mock_warden.rs
rangeserver/src/persistence/: cassandra.rs
rangeserver/src/range_manager/: impl.rs  lock_table.rs
rangeserver/src/storage/: cassandra.rs
rangeserver/src/wal/: cassandra.rs
schema/cassandra/chardonnay/: keyspace.cql  schema.cql
scripts/: linux_install_flatbuffers.sh
tokio-sample/: Cargo.toml
tx_state_store/: Cargo.toml
tx_state_store/src/: client.rs  lib.rs  storage.rs
tx_state_store/src/storage/: cassandra.rs
universe/: Cargo.toml
universe/src/: main.rs  server.rs  storage.rs
universe/src/storage/: cassandra.rs
universe/tests/: integration_tests.rs
warden/: Cargo.toml
warden/src/: assignment_computation.rs  lib.rs  main.rs  persistence.rs  server.rs
