[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = {path = "../proto"}
uuid = {version = "1.10.0", features = ["v4"]}
bytes = "1"
flatbuf = {path = "../flatbuf"}
flatbuffers = "24.3.25"
tokio = { version = "1", features = ["full"] }
derivative = "2.2.0"
serde = { version = "1.0.210", features = ["derive"] }
tracing = "0.1.40"
async-trait = "0.1.83"
chrono = "0.4.38"
