[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.7.2"
common = { version = "0.1.0", path = "../common" }
epoch_reader = { version = "0.1.0", path = "../epoch_reader" }
rangeclient = { version = "0.1.0", path = "../rangeclient" }
strum = "0.26.3"
tokio = "1.40.0"
tokio-util = "0.7.10"
tx_state_store = { version = "0.1.0", path = "../tx_state_store" }
uuid = "1.10.0"
