[package]
name = "epoch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.57"
common = {path = "../common"}
chrono = "0.4.34"
tokio = { version = "1", features = ["full"] }
uuid = {version = "0.8", features = ["v4"]}
scylla = { version = "0.13.2", features = ["chrono"] }
proto = {path = "../proto"}
tonic = "0.11.0"
tokio-util = "0.7.10"
tracing = "0.1.40"
