[package]
name = "rangeserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = {version = "0.8", features = ["v4"]}
scylla = "0.3.1"
bytes = "1"
flatbuf = {path = "../flatbuf"}
chrono = "0.4.34"
flatbuffers = "*"

