[package]
name = "rangeserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
tokio = { version = "1", features = ["full"] }
uuid = {version = "0.8", features = ["v4"]}
scylla = "0.3.1"
bytes = "1"
flatbuf = {path = "../flatbuf"}
proto = {path = "../proto"}
epoch_publisher = {path = "../epoch_publisher"}
epoch_reader = {path = "../epoch_reader"}
chrono = "0.4.34"
flatbuffers = "24.3.25"
thiserror = "1.0.57"
strum = {version ="0.26.1", features = ["std", "derive"]}
machnet = "0.1.9"
tonic = "0.11.0"
tokio-util = "0.7.10"
tokio-stream = {version = "0.1.15", features = ["net"]}
prost = "0.12"
skiplist = "0.5.1"
rand = "0.8.5"
async-trait = "0.1.82"
serde = "1.0.210"
serde_json = "1.0.128"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.11"
