[package]
name = "warden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
proto = {path = "../proto"}
tokio = { version = "1", features = ["full"] }
uuid = {version = "0.8", features = ["v4"]}
scylla = "0.3.1"
bytes = "1"
chrono = "0.4.34"
thiserror = "1.0.57"
strum = {version ="0.26.1", features = ["std", "derive"]}
tonic = "0.11.0"
tokio-stream = { version="0.1.15", features = ["sync"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
pin-project-lite = "0.2.14"
