[package]
name = "warden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
proto = {path = "../proto"}
tokio = { version = "1", features = ["full"] }
bytes = "1"
chrono = "0.4.34"
thiserror = "1.0.57"
strum = {version ="0.26.1", features = ["std", "derive"]}
tonic = "0.11.0"
tokio-stream = { version="0.1.15", features = ["sync"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
once_cell = "1.19.0"
pin-project = "1.1.5"
serde_json = "1.0.128"
futures = "0.3.30"
portpicker = "0.1.1"
uuid = { version = "1.10.0", features = ["v4"] }
scylla = "0.13.2"
tokio-util = "0.7.11"
async-trait = "0.1.83"
